@@ -107,38 +107,13 @@ spec:
 #### 第 1 步：配置并部署 ConfigMap  
 以下示例定义了名为 `fe-conf` 的 ConfigMap，该配置可供 Doris FE 使用：
 ```yaml
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: fe-conf
-  labels:
-    app.kubernetes.io/component: fe
-data:
-  fe.conf: |
-    CUR_DATE=`date +%Y%m%d-%H%M%S`
-
-    # the output dir of stderr and stdout
-    LOG_DIR = ${DORIS_HOME}/log
-
-    JAVA_OPTS="-Djavax.security.auth.useSubjectCredsOnly=false -Xss4m -Xmx8192m -XX:+UseMembar -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xloggc:$DORIS_HOME/log/fe.gc.log.$CUR_DATE"
-
-    # For jdk 9+, this JAVA_OPTS will be used as default JVM options
-    JAVA_OPTS_FOR_JDK_9="-Djavax.security.auth.useSubjectCredsOnly=false -Xss4m -Xmx8192m -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xlog:gc*:$DORIS_HOME/log/fe.gc.log.$CUR_DATE:time"
-
-    # INFO, WARN, ERROR, FATAL
-    sys_log_level = INFO
-
-    # NORMAL, BRIEF, ASYNC
-    sys_log_mode = NORMAL
-
-    # Default dirs to put jdbc drivers,default value is ${DORIS_HOME}/jdbc_drivers
-    # jdbc_drivers_dir = ${DORIS_HOME}/jdbc_drivers
-
-    http_port = 8030
-    rpc_port = 9020
-    query_port = 9030
-    edit_log_port = 9010
-    enable_fqdn_mode = true
+spec:
+  feSpec:
+    configMaps:
+    - configMapName: test-fe1
+      mountPath: /etc/fe/config1
+    - configMapName: test-fe2
+      mountPath: /etc/fe/config2
 ```
 使用 ConfigMap 挂载 FE 启动配置信息时，配置信息对应的 key 必须为 `fe.conf` 。完成配置文件后，通过如下命令部署到 `DorisCluster` 资源将要部署的命名空间。
 ```shell
@@ -155,6 +130,7 @@ spec:
       configMapName: fe-conf
       resolveKey: fe.conf
 ```
+上述配置中，${your_storageclass} 表示希望使用的 [StorageClass](https://kubernetes.io/docs/concepts/storage/storage-classes/) 名称，${storageSize} 表示希望使用的存储大小，${storageSize} 的格式遵循 K8s 的 [quantity 表达方式](https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/quantity/), 比如：100Gi。请在使用时按需替换。
 
 :::tip Tip  
 Kubernetes 部署中，建议使用 FQDN 模式，启动配置中应添加 enable_fqdn_mode=true 。如果想用 IP 模式，且 Kubernetes 集群能够保证 pod 重启后 IP 不发生变化，请参照 issue [#138](https://github.com/apache/doris-operator/issues/138) 进行配置 IP 模式启动。
@@ -164,39 +140,17 @@ Kubernetes 部署中，建议使用 FQDN 模式，启动配置中应添加 enabl
 #### 第 1 步：配置并部署 ConfigMap   
 以下定义了名为 `be-conf` ConfigMap，该配置可供 Doris BE 使用：
 ```yaml
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: be-conf
-  labels:
-    app.kubernetes.io/component: be
-data:
-  be.conf: |
-    CUR_DATE=`date +%Y%m%d-%H%M%S`
-
-    PPROF_TMPDIR="$DORIS_HOME/log/"
-
-    JAVA_OPTS="-Xmx1024m -DlogPath=$DORIS_HOME/log/jni.log -Xloggc:$DORIS_HOME/log/be.gc.log.$CUR_DATE -Djavax.security.auth.useSubjectCredsOnly=false -Dsun.java.command=DorisBE -XX:-CriticalJNINatives -DJDBC_MIN_POOL=1 -DJDBC_MAX_POOL=100 -DJDBC_MAX_IDLE_TIME=300000 -DJDBC_MAX_WAIT_TIME=5000"
-
-    # For jdk 9+, this JAVA_OPTS will be used as default JVM options
-    JAVA_OPTS_FOR_JDK_9="-Xmx1024m -DlogPath=$DORIS_HOME/log/jni.log -Xlog:gc:$DORIS_HOME/log/be.gc.log.$CUR_DATE -Djavax.security.auth.useSubjectCredsOnly=false -Dsun.java.command=DorisBE -XX:-CriticalJNINatives -DJDBC_MIN_POOL=1 -DJDBC_MAX_POOL=100 -DJDBC_MAX_IDLE_TIME=300000 -DJDBC_MAX_WAIT_TIME=5000"
-
-    # since 1.2, the JAVA_HOME need to be set to run BE process.
-    # JAVA_HOME=/path/to/jdk/
-
-    # https://github.com/apache/doris/blob/master/docs/zh-CN/community/developer-guide/debug-tool.md#jemalloc-heap-profile
-    # https://jemalloc.net/jemalloc.3.html
-    JEMALLOC_CONF="percpu_arena:percpu,background_thread:true,metadata_thp:auto,muzzy_decay_ms:15000,dirty_decay_ms:15000,oversize_threshold:0,lg_tcache_max:20,prof:false,lg_prof_interval:32,lg_prof_sample:19,prof_gdump:false,prof_accum:false,prof_leak:false,prof_final:false"
-    JEMALLOC_PROF_PRFIX=""
-
-    # INFO, WARNING, ERROR, FATAL
-    sys_log_level = INFO
-
-    # ports for admin, web, heartbeat service
-    be_port = 9060
-    webserver_port = 8040
-    heartbeat_service_port = 9050
-    brpc_port = 8060
+beSpec:
+  persistentVolumes:
+  - mountPath: /opt/apache-doris/be/log
+    name: belog
+    persistentVolumeClaimSpec:
+      storageClassName: ${your_storageclass}
+      accessModes:
+      - ReadWriteOnce
+      resources:
+        requests:
+          storage: ${storageSize}
 ```
 使用 ConfigMap 挂载 BE 启动配置信息时，配置信息对应的 key 必须为 `be.conf` 。完成配置文件后，将其部署到目标 `DorisCluster` 资源需要部署的命名空间。
 ```shell
